add commands for sql

--- a/src/main/webapp/testUL.html
+++ b/src/main/webapp/testUL.html
@@ -2,18 +2,40 @@
 
 <html>
     <head>
+        <script src="js/jquery-3.2.1.min.js"/></script>
         <title>TODO supply a title</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/mark_style.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
-<!--        <ul id="main_ul">
-            <li>Коровы</li>
-            <li>Ослы</li>
-            <li>Собаки</li>
-            <li>Тигры</li>
-        </ul>-->
+<!--        <div class="dropdown">
+            <button class="btn dropdown-toggle sr-only" type="button" id="dropdownMenu1" data-toggle="dropdown">
+                  Dropdown
+                  <span class="caret"></span>
+                </button>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Действие</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Другое действие</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Что-то еще</a></li>
+              <li role="presentation" class="divider"></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Отдельная ссылка</a></li>
+            </ul>
+        </div>
+        
+        <div class="btn-group">
+        <button class="btn dropdown-toggle" data-toggle="dropdown">Действие <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><a href="#">Действие</a></li>
+              <li><a href="#">Другое действие</a></li>
+              <li><a href="#">Еще и еще</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Отделенный пункт</a></li>
+            </ul>
+        </div>-->
+        
         <ul id="main_ul">
             <li>Животные
               <ul>
