remove all rubbish

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,6 +41,10 @@
               <button id="window_Cancel">Cancel</button><br>
             </div>
         </div>
+        <div class="footer">
+            right click to interact
+        </div>
+        
         
         <script src="js/commands.js"></script>
         <script src="js/mark.js"></script>
